# besm

./: .gitignore  ChangeLog.md  README.md  besm.lang  knuth.rtf  package.yaml
besm-vm/: .gitignore  Cargo.toml  README.md  boot.txt  bootloader.txt  md1.txt  md2.txt  mp1.txt  mp2.txt  mp3.txt  pp1.sm  pp2.sm  pp3.sm  rust-toolchain  source_two.txt  sourcenumbers.txt  to_binary.sh
besm-vm/src/: float.rs  interface.rs  main.rs  opt.rs  ui.rs  vm.rs
besm-vm/src/interface/: input.rs  mod.rs  tui.rs
besm-vm/src/vm/: ds.rs  instruction.rs  mag.rs  mod.rs
besm-vm/test_progs/: add_and_stop.txt  chapter1.txt  simple_arithm.txt  simple_logical.txt  simple_loop.txt  sum_loop.txt  variable_address.txt
compile-pp/: .gitignore  ChangeLog.md  README.md  control_flow.dot  control_flow_documented.dot  control_flow_mapping_subroutines.md  control_flow_selfmodifying.dot  package.yaml  stack.yaml  tracer
compile-pp/.claude/: settings.local.json
compile-pp/app/: Compiler.hs  Main.hs  TraceVisualizer.hs
compile-pp/source_materials/: QUICKSTART.md  README_OCR.md  ocr_processor.py  requirements.txt
compile-pp/src/: Assembler.hs  CFG.hs  Lib.hs  Monad.hs  PP1.hs  Syntax.hs
compile-pp/test/: Spec.hs
examples/: add_and_stop.pp  chapter1-annotated.pp  chapter1.pp  commutivity.pp  knuth.pp  simple_addition.pp  simple_logical.pp  simple_loop.pp  sum_loop.pp  table-2.pp  variable_address.pp
pp-besm/: README.md  package.yaml  stack.yaml
pp-besm/app/: Main.hs
pp-besm/src/: Besm.hs  BitLayout.hs  Lib.hs  Lower.hs  Parser.hs  Put.hs  Syntax.hs
src/: Lib.hs  Put.hs
(+48 files in other folders)
