[package]
name = "besm-vm"
version = "0.1.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2024"

[dependencies]

ratatui = { version = "0.29.0", features = ["termion"]}
bit_field = "0.9.0"
byteorder = "1"
num = "*"
arraydeque = "0.4"
termion = "1"
log = "*"
tui-logger = "0.16"
clap = { version = "4.5" , features = ["derive"] }
